# subrass

./: .gitignore  Cargo.toml  build.sh  package.json  readme.md  server.ts
demo/: app.js  index.html  player.js  renderer.js  style.css  test.ass
src/: api.rs  lib.rs  utils.rs
src/parser/: errors.rs  event.rs  mod.rs  script_info.rs  style.rs
src/renderer/: buffer.rs  compositor.rs  drawing.rs  effects.rs  font.rs  glyph_cache.rs  mod.rs  shaper.rs
src/types/: color.rs  event.rs  mod.rs  override_tag.rs  script_info.rs  style.rs  time.rs
tests/: web.rs
tests/fixtures/: test.ass
