[package]
name = "subrass"
version = "0.1.0"
edition = "2021"
description = "ASS/SSA subtitle parser and renderer for WebAssembly"
license = "MIT"
repository = "https://github.com/user/subrass"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Window",
    "HtmlImageElement",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamReaderMode",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
ab_glyph = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
